# flattener

./: LICENSE  README.md  flattener.py  pyproject.toml
