[tool.poetry]
name = "flattener"
version = "0.1.0"
description = ""
authors = ["brayden <brayden@boxtalk.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
